--- a/timestamp/package.json
+++ b/timestamp/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.2",
+    "moment": "^2.29.4",
     "nanoid": "^4.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
@@ -17,6 +18,7 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-persist": "^6.0.0",
     "sass": "^1.56.1",
+    "validator": "^13.7.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
